--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="profil">Profil</string>
     <string name="tutup">Tutup</string>
     <string name="logout">Logout</string>
-    <string name="tambah_foto">Tambah Foto</string>"
+    <string name="tambah_foto">Tambah Foto</string>
+    <string name="nama">Nama</string>"
+    <string name="tanggal_lahir">Tanggal Lahir</string>
+    <string name="simpan">Simpan</string>
+    <string name="batal">Batal</string>
 </resources>
