--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="tanggal_lahir">Tanggal Lahir</string>
     <string name="simpan">Simpan</string>
     <string name="batal">Batal</string>
+    <string name="hapus">Hapus</string>
 </resources>
